# apply-iq

./: .env  .env.example  DASHBOARD_FEATURES.md  DATABASE_SETUP.md  MYSQL_SETUP.md  QUICK_SETUP.sql  RESUME_PLATFORM_TASKS.md  SUPABASE_SETUP_INSTRUCTIONS.md  mysql_schema.sql  package-lock.json  package.json  vite.config.ts
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  start.py
backend-api/: .env.example  README.md  package.json  server.js
backend-api/config/: database.js
backend-api/routes/: auth.js  jobs.js  packages.js  resumes.js  users.js
client/: App.tsx  global.css
client/components/: JobMatchingSystem.tsx  SupabaseTest.tsx
client/contexts/: AuthContext.tsx
client/lib/: api.ts  database.ts  supabase.ts
client/pages/: Admin.tsx  AdminDashboard.tsx  Dashboard.tsx  EducatorTools.tsx  Index.tsx  Login.tsx  Onboarding.tsx  PackageDashboard.tsx  PackageUpgrade.tsx  ResumeAssistant.tsx  ResumeBuilder.tsx  Signup.tsx  SupabaseTest.tsx  TestDashboard.tsx
database/: demo-data.sql  schema.sql
docs/: README.md
docs/backend/: node-api.md  python-api.md
docs/frontend/: components.md  hooks.md  lib.md  screens.md
docs/shared/: types.md
prisma/: schema.prisma  seed.ts
scripts/: check-connection.ts  setup-database.ts  test-supabase.ts
